fix ouibonce z-index

--- a/css/argon-style-v1.css
+++ b/css/argon-style-v1.css
@@ -89,7 +89,7 @@
   width: 100%;
   position: relative;
   transform: translate3d(0, 0, 0);
-  transition: all 0.33s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  transition: 0.1s;
 }
 
 @media screen and (max-width: 991px) {
